[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/aircraft/Aircraft.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Tilemap/ships_packed.png" type="Texture" id=2]
[ext_resource path="res://src/aircraft/enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://src/projectiles/EnemyBulletA.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/SFX/explosion01.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/SFX/impact.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 8.5 )

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 3 )
health = 30.0
speed = 100.0
hit_damage = 10.0
bullet_scene = ExtResource( 4 )
score = 100

[node name="HitSFX" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource( 6 )

[node name="ExplosionSFX" parent="." index="1"]
stream = ExtResource( 5 )

[node name="GunTimer" parent="." index="2"]
wait_time = 1.25

[node name="Sprite" parent="." index="3"]
rotation = 3.14159
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 64, 32, 32 )

[node name="CollisionShape2D" parent="." index="4"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="HitArea" parent="." index="5"]
collision_layer = 0

[node name="CollisionShape2D" parent="HitArea" index="0"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="HitArea" index="1"]
position = Vector2( 0, -0.5 )
scale = Vector2( 1, 0.65 )

[node name="DetectArea" type="Area2D" parent="." index="6"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectArea" index="0"]
polygon = PoolVector2Array( 0, 0, 288, 450, -288, 450 )

[node name="Muzzle" parent="." index="7"]
position = Vector2( 0, 8 )

[connection signal="screen_entered" from="HitArea/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="HitArea/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
